# c_projects

./: .gitignore  README.md  cmake_file_setup.txt
595_HW2/: q1.c  q10.c  q11.c  q2.c  q3.c  q4.c  q5.c  q6.c  q7.c  q8.c  q9.c
add_pointer/: CMakeLists.txt  add_ptr.c
area_of_rectangle/: CMakeLists.txt  rectangle.c
areas/: CMakeLists.txt  areas.c
arithmetic/: CMakeLists.txt  arithmetic.c
armstrong_numbers/: CMakeLists.txt  armstrong.c
array_reversal/: CMakeLists.txt  array_rev.c
arrow_op/: CMakeLists.txt  arrow.c
averaging_calculator/: CMakeLists.txt  averaging.c
basic_pointer/: CMakeLists.txt  ptr.c
basic_queue/: CMakeLists.txt  queue.c
basic_tree/: CMakeLists.txt  tree.c
binary_addition/: CMakeLists.txt  bin_addition.c
binary_search/: CMakeLists.txt  bin_search.c
binary_search_even/: CMakeLists.txt  binary_search_even.c
bubble_sort/: CMakeLists.txt  sort.c
calculator/: CMakeLists.txt  calculator.c
collatz/: CMakeLists.txt  collatz.c
count_number_of_words/: CMakeLists.txt  word_counter.c
count_nums/: CMakeLists.txt  count.c
count_nums2/: count.c
cycle_sort/: CMakeLists.txt  cycle_sort.c
decimal2binary/: CMakeLists.txt  decimal2binary.c
duplicate_array/: CMakeLists.txt  dup_array.c
dynamic_array/: CMakeLists.txt  dynamic_array.c
fibonnaci/: CMakeLists.txt  fibonnaci.c
find_random_num_of_cpu/: CMakeLists.txt  random_cpu_num.c
fizzbuzz/: CMakeLists.txt  fizzbuzz.c
folder_reader/: CMakeLists.txt  folder_reader.c
frequency_of_elements/: CMakeLists.txt  freq.c
reverse_vowels/: CMakeLists.txt  reverse.c
(+84 files in other folders)
